Stop category bar jumping around

--- a/src/components/productCard/ProductCard.module.css
+++ b/src/components/productCard/ProductCard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background-color: white;
   width: 15em;
-  max-height: 25em;
+  max-height: 17em;
   padding: 1em;
   border: black solid 1px;
   border-radius: 1%;
