--- a/src/components/shop/Shop.module.css
+++ b/src/components/shop/Shop.module.css
@@ -1,6 +1,7 @@
 .shopCont {
   display: flex;
   flex-direction: column;
+  flex: 1;
   /* overflow-x: hidden; */
   /* height: 100%; */
 }
