--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -1,5 +1,4 @@
 .sidebarCont {
-  flex-grow: 1;
   padding: 0.5em;
   background-color: white;
 }
